test/raw_tests/fails/reserved_kw_ko1.sol
contract InterestingVars {
    int after;
    int alias;
    int apply;
    int auto;
    int case;
    int copyof;
    int default;
    int define;
    int final;
    int immutable;
    int implements;
    int in;
    int inline;
    int let;
    int macro;
    int match;
    int mutable;
    int null;
    int of;
    int partial;
    int promise;
    int reference;
    int relocatable;
    int sealed;
    int sizeof;
    int static;
    int supports;
    int switch;
    int typedef;
    int typeof;
    int unchecked;
}
